--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+RaisingMinds/media/post_images/picofme.png
+RaisingMinds/media/schoolProfile_vetification_documents/134_5_3776790_1700898539_AWS_Skill_Builder_Course_C_KE1NYjp.pdf
+RaisingMinds/media/schoolProfile_profile_images/picofme.png
+RaisingMinds/media/profile_images/picofme.png
